@@ -24,11 +24,10 @@
 #include "logview.h"
 
 int isLogFile (char *filename, gboolean show_error);
-int isSameDay (time_t day1, time_t day2);
+static int isSameDay (time_t day1, time_t day2);
 int WasModified (Log *log);
 void ParseLine (char *buff, LogLine * line);
-void ReadLogStats (Log * log, gchar **buffer_lines);
-void UpdateLogStats( Log *log );
+static void ReadLogStats (Log * log, gchar **buffer_lines);
 void CloseLog (Log * log);
 time_t GetDate (char *line);
 Log * OpenLogFile (char *filename);
