@@ -26,8 +26,6 @@ void monitor_stop (LogviewWindow *window);
 GtkWidget *monitor_create_widget (LogviewWindow *window);
 void go_monitor_log (LogviewWindow *window);
 void mon_update_display (LogviewWindow *window);
-static void mon_format_line (char *buffer, int bufsize, LogLine *line);
-gboolean mon_check_logs (gpointer data);
 /*void mon_check_logs (GnomeVFSMonitorHandle *handle, const gchar *monitor_uri, 
 		const gchar *info_uri, GnomeVFSMonitorEventType event_type, 
 		gpointer data);*/
