@@ -1,5 +1,11 @@
 2004-11-05  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c: Remove a warning.
+
+	* zoom.c: Move stuff around, make functions static.
+
+	* log_repaint.c: remove log_redrawdetail.
+
 	* config.c: Remove includes.
 
 	* configdata.h: New. Move ConfigData struct here.
